k8s/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system

spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 30180
    - protocol: TCP
      name: websecure
      port: 4443
      nodePort: 30443
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-webui
  namespace: kube-system

spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 80
      nodePort: 30280
  selector:
    app: traefik-webui
