k8s/04-sampleroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`sc-sh-development.npool.top`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`sc-sh-development.npool.top`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: myresolver
